sandc/test/fixtures/astRegression/shouldSucceed/productions/classDeclaration/ClassExtends.sand
pub class ClassExtends extends SuperClass {
    
}