sandc/test/fixtures/astRegression/shouldFail/productions/file/PrivClassBeforePubClass.sand
class PrivClass {

}

pub class PubClass {
    
}